[package]
name = "actix-wasm-test"
version = "0.1.0"
authors = ["yuki <yuki@wthrk.jp>"]
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
actix = { path = "../actix", version = "0.13.1", features = ["rt-wasm-bindgen", "macros"], default-features = false }

[dev-dependencies]
futures-util = { version = "0.3.22", default-features = false }
wasm-bindgen-test = "0.3.34"
wasm-bindgen-futures = "*"
web-sys = { vertion = "*", features = ["console", "Window"] }
tokio = { version = "*", futures = ["sync"], default-features = false }
actix-rt = { git = "https://github.com/wthrk/actix-net", branch = "with-wasm", features = ["rt-wasm-bindgen"], default-features = false }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
