[package]
name = "actix"
version = "0.13.3"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
]
description = "Actor framework for Rust"
keywords = ["actor", "futures", "actix", "async", "tokio"]
repository = "https://github.com/actix/actix"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version.workspace = true

[badges]
maintenance.status = "passively-maintained"

[lib]
name = "actix"
path = "src/lib.rs"

[features]
default = ["macros", "rt-tokio"]

# Re-exports derive macros from actix-derive and enables `#[actix::main]`.
macros = ["actix-macros", "actix_derive"]

rt-tokio = [
  "tokio/rt",
  "tokio/net",
  "tokio/parking_lot",
  "tokio/signal",
  "tokio/time",
  "actix-rt/rt-tokio",
]
rt-wasm-bindgen = [
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "tokio",
  "actix-rt/rt-wasm-bindgen",
]

# Adds assertion to prevent processing too many messages on event loop
mailbox_assert = []

[dependencies]
actix-macros = { git = "https://github.com/wthrk/actix-net", branch = "with-wasm", optional = true }
actix-rt = { git = "https://github.com/wthrk/actix-net", branch = "with-wasm", default-features = false }

actix_derive = { version = "0.6", optional = true }

bitflags = "2"
bytes = "1"
crossbeam-channel = "0.5"
futures-core = { version = "0.3.22", default-features = false }
futures-sink = { version = "0.3.22", default-features = false }
futures-task = { version = "0.3.22", default-features = false }
futures-util = { version = "0.3.22", default-features = false }
log = "0.4"
once_cell = "1.5"
pin-project-lite = "0.2"
smallvec = "1.6.1"
tokio-util = { version = "0.7", features = ["codec"] }

tokio = { version = "1", features = ["macros", "sync", "io-util"], optional = true, default-features = false }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
parking_lot = { version = "0.12" }

[dev-dependencies]
doc-comment = "0.3"
futures-util = { version = "0.3.22", default-features = false, features = ["alloc"] }

[[example]]
name = "fibonacci"
required-features = ["macros"]

[[example]]
name = "ping"
required-features = ["macros"]

[[example]]
name = "weak_addr"
required-features = ["macros"]

[[example]]
name = "weak_recipient"
required-features = ["macros"]
